@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-slim
+FROM openjdk:16-jdk-alpine
 
 ARG RAM_AMOUNT
 
@@ -6,4 +6,4 @@ ENV ram=${RAM_AMOUNT}
 
 WORKDIR /server
 
-CMD echo "Docker Minecra Server is starting \n" && java -Xmx${ram} -jar paper-1.19.3-386.jar
+CMD echo "Docker Minecra Server is starting \n" && java -Xms8704M -Xmx8704M --add-modules=jdk.incubator.vector -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -jar paper-1.16.5-794.jar
